= Changelog of IDEasy

This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.08.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1387[#1387]: Hide exception from user when a tool version is not supported

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/31?closed=1[milestone 2025.08.001].

== 2025.07.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1401[#1401]: Privacy option not working properly
* https://github.com/devonfw/IDEasy/issues/1400[#1400]: ide --offline status does not replicate ide status behavior when offline
* https://github.com/devonfw/IDEasy/issues/742[#742]: Produce constructive warning if git repo url is not sane
* https://github.com/devonfw/IDEasy/issues/1297[#1297]: Migration from OSSRH to new Maven Central service

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/30?closed=1[milestone 2025.07.001].

== 2025.06.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1346[#1346]: ide upgrade throws exception when offline
* https://github.com/devonfw/IDEasy/issues/1133[#1133]: Version autocomplete with full list displays files too
* https://github.com/devonfw/IDEasy/issues/1372[#1372]: Add gradlew support
* https://github.com/devonfw/IDEasy/issues/1304[#1304]: Error when reinstalling vscode
* https://github.com/devonfw/IDEasy/issues/1160[#1160]: Print IDEasy version in ide status when offline
* https://github.com/devonfw/IDEasy/issues/901[#901]: Consider maven wrapper mvnw
* https://github.com/devonfw/IDEasy/issues/1303[#1303]: Add option to show GPDR compliant console output
* https://github.com/devonfw/IDEasy/issues/1309[#1309]: ide.bat splitting short options
* https://github.com/devonfw/IDEasy/issues/1361[#1361]: ide create does not install intellij plugins properly